CPP/compiling_error.txt
/home/sunbeam/CDAC/CPP/inherit.cpp:6:1: error: expected class-name before ‘{’ token
 {
 ^
